# konigsberg-python

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yml
konigsberg/euler/: problem1.py  problem2.py
src/euler/: problem1.py
tests/euler/: test_problem1.py  test_problem2.py
